# TukaTuka-ML-Ads

./: README.md  course_project.rar  parser.py
recycle/: pyproject.toml
recycle/pip-wheel-metadata/recycle-0.1.0.dist-info/: METADATA
recycle/recycle/: manage.py
recycle/recycle/app/: admin.py  forms.py  models.py  urls.py  views.py
recycle/recycle/app/management/commands/: flagma_othody-plenki-pvd.json  generate.py
recycle/recycle/app/migrations/: 0001_initial.py  0002_mail.py  0003_auto_20190518_1516.py
recycle/recycle/app/templates/: auth_form.html  base.html  change_company.html  del_company.html  get_ad.html  get_company.html  post_ad.html  post_company.html
recycle/recycle/recycle/: settings.py  urls.py  wsgi.py
recycle/tests/: test_recycle.py  test_requests.py
